# ocaml-autoconf

./: .gitignore  ChangeLog  LICENSE  Makefile  README  ocaml.m4  ocaml.m4.pod
examples/automake/: Makefile.am  README  aclocal.m4  configure.ac  gtk_test.ml
